# opengl-skeleton

./: CMakeLists.txt  Makefile  README.md  install_dependencies.ps1  run.ps1
include/: animation.h  animator.h  assimp_helper.h  bone.h  error_utils.h  funcs.h  mesh.h  model.h
models/salsa/: salsa_dancing.dae
shaders/: anim_frag.glsl  anim_vertex.glsl  asteroid-vshader.glsl  borderfrag.glsl  c2frag.glsl  c2vert.glsl  cfrag.glsl  cvert.glsl  frag.glsl  frag2.glsl  grassfrag.glsl  instArray-vshader.glsl  instancing-fshader.glsl  instancing-vshader.glsl  light_frag.glsl  light_vertex.glsl  mfshader.glsl  miror_vshader.glsl  model-fshader.glsl  model-vshader.glsl  modelGeom.glsl  mvshader.glsl  normalViz-frag.glsl  normalViz-geom.glsl  normalViz-vshader.glsl  orthotest.frag  orthotest.vert  quad_fshader.glsl  quad_vshader.glsl  reflect-fshader.glsl  reflect-vshader.glsl  refract-fshader.glsl  refract-vshader.glsl  shader.glsl  shader2.glsl  skybox-f.glsl  skybox-v.glsl  squareF.glsl  squareGeom.glsl  squareV.glsl  (+3 more)
src/: camera.cpp  funcs.cpp  instancing-main.cpp  main.cpp  mesh.cpp  model.cpp
